# client

cmake/modules/: NSIS.template.in
src/cmd/: CMakeLists.txt  cmd.manifest.in  cmd_version.rc.in
src/crashreporter/: CMakeLists.txt  version.rc.in  xpcompat.manifest.in
src/gui/: CMakeLists.txt  gui.manifest.in  gui_version.rc.in  version.rc.in
src/libsync/: CMakeLists.txt  libsync.manifest.in  libsync_version.rc.in  theme.h
